[package]
name = "rspc-tauri2"
version = "0.0.1"
edition = "2021"

description = "Tauri adapter for rspc"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]

license = "MIT"
documentation = "https://rspc.dev"
repository = "https://github.com/oscartbeaumont/rspc"

keywords = ["async", "specta", "rust-to-ts", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]

# /bin/sh RUSTDOCFLAGS="--cfg docsrs2" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs2",
] # TODO: Rename to `docsrs` once Tokio fixes https://github.com/tokio-rs/tokio/pull/6360

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs2)'] }

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
futures = "0.3.30"

tokio = { version = "1.40.0", features = ["sync", "rt", "macros"] }
specta = { version = "2.0.0-rc.20" }
tauri = { version = "2.0.0-rc.15" }
rspc = { version = "0.2.0" }

tracing = { version = "0.1.40", optional = true }
