[package]
name = "rspc_tauri2"
version = "0.0.1"
edition = "2021"

description = "Tauri adapter for rspc"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]

license = "MIT"
documentation = "https://rspc.dev"
repository = "https://github.com/oscartbeaumont/rspc"

keywords = ["async", "specta", "rust-to-ts", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]

[package.metadata."docs.rs"]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs",
]

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
thiserror = "1.0.64"
futures = "0.3.31"

tokio = { version = "1.40.0", features = ["sync", "rt", "macros"] }
specta = { version = "2.0.0-rc.20" }
tauri = { version = "2.0.0-rc.15" }
rspc = { version = "0.2.0" }

tracing = { version = "0.1.40", optional = true }