[package]
name = "rspc_tauri_specta_example"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "rspc_tauri_specta_example_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.13", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.16", features = [] }
tauri-plugin-shell = "2.0.0-rc.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
rspc-tauri2 = { path = "../../rspc_tauri2" }
rspc = { version = "0.2.0" }
specta = "2.0.0-rc.20"

tauri-specta = { version = "2.0.0-rc.20", features = [
    "javascript",
    "typescript",
] }